--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".reviews.Comments"></activity>
+        <activity
+            android:name=".reviews.PickedComment"
+            android:theme="@style/Theme.AppCompat.Dialog">
+        </activity>
+        <activity android:name=".reviews.Comments" />
         <activity android:name=".reviews.Review" />
         <activity android:name=".chat.Messages" />
         <activity android:name=".chat.Dialogs" />
