--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".fragments.panelElements.TopPanel"></activity>
         <activity
             android:name=".reviews.PickedComment"
-            android:theme="@style/Theme.AppCompat.Dialog">
-        </activity>
+            android:theme="@style/Theme.AppCompat.Dialog"></activity>
         <activity android:name=".reviews.Comments" />
         <activity android:name=".reviews.Review" />
         <activity android:name=".chat.Messages" />
