Переделан процесс регистрации и входа, удалён пароль

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".test.VerifyPhoneActivity"></activity>
+        <activity android:name=".logIn.CreatingNewPassword"></activity>
+        <activity android:name=".logIn.PasswordRecovery" />
+        <activity android:name=".test.VerifyPhoneActivity" />
         <activity android:name=".test.ProfileActivity" />
-        <activity android:name=".test.MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".test.MainActivity" />
         <activity android:name=".fragments.panelElements.TopPanel" />
         <activity
             android:name=".reviews.PickedComment"
@@ -28,7 +24,11 @@
         <activity android:name=".chat.Dialogs" />
         <activity android:name=".logIn.Registration" />
         <activity android:name=".logIn.Authorization">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity android:name=".other.Profile" />
         <activity android:name=".other.SearchService" />
