--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".logIn.CreatingNewPassword"></activity>
+        <activity android:name=".other.Subscribers"></activity>
+        <activity android:name=".logIn.CreatingNewPassword" />
         <activity android:name=".logIn.PasswordRecovery" />
         <activity android:name=".test.VerifyPhoneActivity" />
         <activity android:name=".test.ProfileActivity" />
