--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".other.Premium"></activity>
+        <service
+            android:name=".myServices.MessageService"
+            android:enabled="true"
+            android:exported="false"></service>
+
+        <activity android:name=".other.Premium" />
         <activity android:name=".other.Subscribers" />
         <activity android:name=".logIn.CreatingNewPassword" />
         <activity android:name=".logIn.PasswordRecovery" />
