--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,9 @@
         <activity android:name=".editing.EditProfile" />
         <activity android:name=".logIn.VerifyPhone" />
 
-        <service android:name=".other.MyService" />
+        <service
+            android:name=".other.MyService"
+            android:permission="android.permission.BIND_JOB_SERVICE" />
     </application>
 
 </manifest>
