адаптивная верстка, научились верстать, привязывая к футеру и хедеру

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".other.Premium"></activity>
-        <activity android:name=".other.Subscribers" />
+        <activity android:name=".searchService.Premium"></activity>
+        <activity android:name=".subscriptions.Subscribers" />
         <activity
             android:name=".reviews.PickedComment"
             android:theme="@style/Theme.AppCompat.Dialog" />
@@ -32,10 +32,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".other.Profile" />
-        <activity android:name=".other.SearchService" />
+        <activity android:name=".searchService.SearchService" />
         <activity android:name=".createService.AddService" />
-        <activity android:name=".other.GuestService" />
-        <activity android:name=".other.MainScreen" />
+        <activity android:name=".searchService.GuestService" />
+        <activity android:name=".searchService.MainScreen" />
         <activity android:name=".createService.MyTime" />
         <activity android:name=".createService.MyCalendar" />
         <activity android:name=".editing.EditService" />
