--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".searchService.Premium"></activity>
+        <activity android:name=".searchService.SearchServ"></activity>
+        <activity android:name=".searchService.Premium" />
         <activity android:name=".subscriptions.Subscribers" />
         <activity
             android:name=".reviews.PickedComment"
