--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.6.2'
     implementation 'com.google.firebase:firebase-storage:16.0.5'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
 }
