--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         <activity android:name="com.bunbeauty.ideal.myapplication.chat.Messages" />
         <activity android:name="com.bunbeauty.ideal.myapplication.chat.Dialogs" />
         <activity android:name="com.bunbeauty.ideal.myapplication.logIn.Registration" />
-        <activity android:name="com.bunbeauty.ideal.myapplication.logIn.Authorization">
+        <activity android:name="com.bunbeauty.ideal.myapplication.cleanArchitecture.presentation.logIn.AuthorizationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -32,7 +32,7 @@
             </intent-filter>
         </activity>
         <activity android:name="com.bunbeauty.ideal.myapplication.other.Profile" />
-        <activity android:name="com.bunbeauty.ideal.myapplication.createService.AdditionService" />
+        <activity android:name="com.bunbeauty.ideal.myapplication.createService.AddingService" />
         <activity android:name="com.bunbeauty.ideal.myapplication.searchService.GuestService" />
         <activity android:name="com.bunbeauty.ideal.myapplication.searchService.MainScreen" />
         <activity android:name="com.bunbeauty.ideal.myapplication.createService.MyTime" />
