--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,15 +23,15 @@
         <activity android:name="com.bunbeauty.ideal.myapplication.reviews.Review" />
         <activity android:name="com.bunbeauty.ideal.myapplication.chat.Messages" />
         <activity android:name="com.bunbeauty.ideal.myapplication.chat.Dialogs" />
-        <activity android:name="com.bunbeauty.ideal.myapplication.cleanArchitecture.presentation.logIn.RegistrationActivity" />
-        <activity android:name="com.bunbeauty.ideal.myapplication.cleanArchitecture.presentation.logIn.AuthorizationActivity">
+        <activity android:name="com.bunbeauty.ideal.myapplication.cleanArchitecture.ui.activities.logIn.RegistrationActivity" />
+        <activity android:name="com.bunbeauty.ideal.myapplication.cleanArchitecture.ui.activities.logIn.AuthorizationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.bunbeauty.ideal.myapplication.cleanArchitecture.presentation.profile.ProfileActivity" />
+        <activity android:name="com.bunbeauty.ideal.myapplication.cleanArchitecture.ui.activities.profile.ProfileActivity" />
         <activity android:name="com.bunbeauty.ideal.myapplication.createService.AddingService" />
         <activity android:name="com.bunbeauty.ideal.myapplication.searchService.GuestService" />
         <activity android:name="com.bunbeauty.ideal.myapplication.searchService.MainScreen" />
@@ -39,7 +39,7 @@
         <activity android:name="com.bunbeauty.ideal.myapplication.createService.MyCalendar" />
         <activity android:name="com.bunbeauty.ideal.myapplication.editing.EditService" />
         <activity android:name="com.bunbeauty.ideal.myapplication.editing.EditProfile" />
-        <activity android:name="com.bunbeauty.ideal.myapplication.cleanArchitecture.presentation.logIn.VerifyPhoneActivity" />
+        <activity android:name="com.bunbeauty.ideal.myapplication.cleanArchitecture.ui.activities.logIn.VerifyPhoneActivity" />
         
         <service
             android:name="com.bunbeauty.ideal.myapplication.other.MyService"
