--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,11 +13,7 @@ android {
         versionCode 2
         versionName "1.0.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-       /* javaCompileOptions {
-            annotationProcessorOptions {
-                includeCompileClasspath false
-            }
-        }*/
+
 
         javaCompileOptions {
             annotationProcessorOptions {
@@ -78,11 +74,12 @@ dependencies {
     implementation "androidx.room:room-runtime:$rootProject.roomVersion"
     kapt "androidx.room:room-compiler:$rootProject.roomVersion"
 
-    //moxy
+    //moxyX
     implementation 'tech.schoolhelper:moxy-x:1.7.0'
-    annotationProcessor 'tech.schoolhelper:moxy-x-compiler:1.7.0'
-    implementation 'tech.schoolhelper:moxy-x-android:1.7.0'
+    kapt 'tech.schoolhelper:moxy-x-compiler:1.7.0'
     implementation 'tech.schoolhelper:moxy-x-androidx:1.7.0'
+
+
 }
 repositories {
     mavenCentral()
