--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,8 @@ android {
 }
 
 dependencies {
+    def room_version = "2.1.0-alpha06"
+
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -65,15 +67,15 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     //dagger
-    implementation 'com.google.dagger:dagger:2.17'
-    kapt 'com.google.dagger:dagger-compiler:2.15'
-    implementation 'com.google.dagger:dagger-android:2.15'
-    kapt 'com.google.dagger:dagger-android-processor:2.15'
+    implementation "com.google.dagger:dagger:$dagger_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
+    implementation "com.google.dagger:dagger-android:$dagger_version"
+    kapt "com.google.dagger:dagger-android-processor:$dagger_version"
 
     //room
-    implementation "androidx.room:room-runtime:$rootProject.roomVersion"
-    kapt "androidx.room:room-compiler:$rootProject.roomVersion"
-    implementation "android.arch.persistence.room:rxjava2:1.1.1"
+    implementation 'androidx.room:room-runtime:2.2.0'
+    kapt 'androidx.room:room-compiler:2.2.0'
+    implementation 'androidx.room:room-ktx:2.2.0'
 
     //moxyX
     implementation 'tech.schoolhelper:moxy-x:1.7.0'
@@ -81,7 +83,10 @@ dependencies {
     implementation 'tech.schoolhelper:moxy-x-androidx:1.7.0'
 
     //rxJava and rxKotlin
-    implementation 'io.reactivex.rxjava2:rxkotlin:2.0.0'
+//    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+
+    //coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2'
 
 }
 repositories {
