--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,10 @@
 
 buildscript {
     ext {
-        kotlin_version = '1.3.41'
-        roomVersion = '2.2.0-rc01'
+        kotlin_version = '1.3.31'
+        room_version = '2.2.0'
+        dagger_version = '2.17'
     }
-
 
     repositories {
         google()
