--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
             </intent-filter>
         </activity>
         <activity android:name="com.bunbeauty.ideal.myapplication.cleanArchitecture.mvp.activities.profile.ProfileActivity" />
-        <activity android:name="com.bunbeauty.ideal.myapplication.cleanArchitecture.mvp.activities.createService.AddingService" />
+        <activity android:name="com.bunbeauty.ideal.myapplication.cleanArchitecture.mvp.activities.createService.AddingServiceActivity" />
         <activity android:name="com.bunbeauty.ideal.myapplication.searchService.GuestService" />
         <activity android:name="com.bunbeauty.ideal.myapplication.searchService.MainScreen" />
         <activity android:name="com.bunbeauty.ideal.myapplication.createService.MyTime" />
