--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
         </activity>
         <activity android:name="com.bunbeauty.ideal.myapplication.cleanArchitecture.mvp.activities.profile.ProfileActivity" />
         <activity android:name="com.bunbeauty.ideal.myapplication.cleanArchitecture.mvp.activities.createService.AddingServiceActivity" />
-        <activity android:name="com.bunbeauty.ideal.myapplication.searchService.GuestService" />
+        <activity android:name="com.bunbeauty.ideal.myapplication.cleanArchitecture.mvp.activities.service.ServiceActivity" />
         <activity android:name="com.bunbeauty.ideal.myapplication.searchService.MainScreen" />
         <activity android:name="com.bunbeauty.ideal.myapplication.createService.MyTime" />
         <activity android:name="com.bunbeauty.ideal.myapplication.createService.MyCalendar" />
