--- a/gradle.properties
+++ b/gradle.properties
@@ -8,10 +8,12 @@
 # The setting is particularly useful for tweaking memory settings.
 android.enableJetifier=true
 android.useAndroidX=true
-org.gradle.jvmargs=-Xmx1536m
+org.gradle.jvmargs=-XX:MaxHeapSize=1024m -Xmx1024m
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+# Kotlin code style for this fragment_project: "official" or "obsolete":
+kotlin.code.style=official
 
 
