--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         <activity android:name="com.bunbeauty.ideal.myapplication.reviews.Comments" />
         <activity android:name="com.bunbeauty.ideal.myapplication.reviews.Review" />
         <activity android:name="com.bunbeauty.ideal.myapplication.chat.Messages" />
-        <activity android:name="com.bunbeauty.ideal.myapplication.chat.Dialogs" />
+        <activity android:name="com.bunbeauty.ideal.myapplication.chat.DialogsActivity" />
         <activity android:name="com.bunbeauty.ideal.myapplication.cleanArchitecture.mvp.activities.logIn.RegistrationActivity" />
         <activity android:name="com.bunbeauty.ideal.myapplication.cleanArchitecture.mvp.activities.logIn.AuthorizationActivity">
             <intent-filter>
