--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,6 +94,10 @@ dependencies {
     // Optional -- Mockito framework
     testImplementation 'org.mockito:mockito-core:3.0.0'
     testImplementation 'org.mockito:mockito-inline:3.0.0'
+
+    //joda date-time
+    implementation 'net.danlew:android.joda:2.10.3'
+    testImplementation 'joda-time:joda-time:2.10.3'
 }
 repositories {
     mavenCentral()
