--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext {
         kotlin_version = '1.3.61'
         dagger_version = '2.26'
+        material_design_version = '1.2.0-alpha05'
     }
 
     repositories {
