--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,6 +104,7 @@ dependencies {
     //keyboard listener for messages
     implementation 'net.yslibrary.keyboardvisibilityevent:keyboardvisibilityevent:3.0.0-RC2'
 
+    compile 'com.jaredrummler:material-spinner:1.3.1'
 }
 repositories {
     mavenCentral()
