--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,10 +45,10 @@ dependencies {
     implementation 'androidx.core:core:1.2.0'
 
     implementation 'com.google.firebase:firebase-functions:19.0.2'
-    implementation 'com.google.firebase:firebase-messaging:20.1.6'
+    implementation 'com.google.firebase:firebase-messaging:20.1.7'
 
     implementation 'com.google.android.material:material:1.1.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     testImplementation 'junit:junit:4.13'
     testImplementation "io.mockk:mockk:1.9.3"
     androidTestImplementation 'androidx.test:runner:1.2.0'
@@ -58,7 +58,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     //firebase
-    implementation 'com.google.firebase:firebase-core:17.4.0'
+    implementation 'com.google.firebase:firebase-core:17.4.1'
     implementation 'com.google.firebase:firebase-database:19.3.0'
     implementation 'com.google.firebase:firebase-auth:19.3.1'
     implementation 'com.google.code.gson:gson:2.8.6'
@@ -101,12 +101,16 @@ dependencies {
     implementation 'net.danlew:android.joda:2.10.3'
     testImplementation 'joda-time:joda-time:2.10.3'
 
-    //material
-    implementation "com.google.android.material:material:$material_design_version"
     //keyboard listener for messages
     implementation 'net.yslibrary.keyboardvisibilityevent:keyboardvisibilityevent:3.0.0-RC2'
 
+    //material
+    implementation "com.google.android.material:material:$material_design_version"
+
+
     implementation 'com.jaredrummler:material-spinner:1.3.1'
+    implementation 'com.miguelcatalan:materialsearchview:1.4.0'
+
 }
 repositories {
     mavenCentral()
