--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name="com.bunbeauty.ideal.myapplication.cleanArchitecture.mvp.activities.comments.CurrentCommentActivity"></activity>
+        <activity android:name="com.bunbeauty.ideal.myapplication.cleanArchitecture.mvp.activities.comments.CommentsActivity" />
         <activity android:name="com.bunbeauty.ideal.myapplication.TestActivity" />
         <activity
             android:name="com.bunbeauty.ideal.myapplication.reviews.PickedComment"
