--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test:rules:1.2.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+
     //Espresso
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
@@ -70,7 +71,7 @@ dependencies {
     //kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-    //dagger
+    //dagger 2
     implementation "com.google.dagger:dagger:$dagger_version"
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
     implementation "com.google.dagger:dagger-android:$dagger_version"
@@ -93,6 +94,7 @@ dependencies {
     testImplementation 'junit:junit:4.13'
     // Optional -- Robolectric environment
     testImplementation 'androidx.test:core:1.2.0'
+
     // Optional -- Mockito framework
     testImplementation 'org.mockito:mockito-core:3.0.0'
     testImplementation 'org.mockito:mockito-inline:3.0.0'
@@ -106,7 +108,6 @@ dependencies {
 
     //material
     implementation "com.google.android.material:material:$material_design_version"
-
 
     implementation 'com.jaredrummler:material-spinner:1.3.1'
     implementation 'com.miguelcatalan:materialsearchview:1.4.0'
