--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name="com.bunbeauty.ideal.myapplication.cleanArchitecture.mvp.activities.comments.ServiceCommentsActivity"></activity>
         <activity
             android:name="com.bunbeauty.ideal.myapplication.cleanArchitecture.mvp.activities.comments.CreationCommentActivity"
             android:theme="@style/Theme.AppCompat.Dialog" />
