--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,13 +59,15 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     //firebase
-    implementation 'com.google.firebase:firebase-core:17.4.3'
-    implementation 'com.google.firebase:firebase-database:19.3.0'
-    implementation 'com.google.firebase:firebase-auth:19.3.1'
+    implementation 'com.google.firebase:firebase-core:17.4.4'
+    implementation 'com.google.firebase:firebase-database:19.3.1'
+    implementation 'com.google.firebase:firebase-auth:19.3.2'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.google.firebase:firebase-storage:19.1.1'
     //picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
+    //cropper
+    api 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
     //recycler
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     //kotlin
