--- a/app/build.gradle
+++ b/app/build.gradle
@@ -113,6 +113,9 @@ dependencies {
 
     implementation 'com.jaredrummler:material-spinner:1.3.1'
     implementation 'com.miguelcatalan:materialsearchview:1.4.0'
+    
+    //Subsampling Scale Image View
+    implementation 'com.davemorrissey.labs:subsampling-scale-image-view-androidx:3.10.0'
 
 }
 repositories {
