--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,10 +42,10 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.core:core:1.3.0'
+    implementation 'androidx.core:core:1.3.1'
 
     implementation 'com.google.firebase:firebase-functions:19.0.2'
-    implementation 'com.google.firebase:firebase-messaging:20.2.0'
+    implementation 'com.google.firebase:firebase-messaging:20.2.3'
 
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
@@ -117,6 +117,8 @@ dependencies {
     //Subsampling Scale Image View
     implementation 'com.davemorrissey.labs:subsampling-scale-image-view-androidx:3.10.0'
 
+    //for styles
+    implementation 'com.airbnb.android:paris:1.5.0'
 }
 repositories {
     mavenCentral()
